k8s/manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travelo-backend
  namespace: travelo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: travelo-backend
  template:
    metadata:
      labels:
        app: travelo-backend
    spec:
      containers:
        - name: backend
          image: docker.io/samoyuom/travelo-backend:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 5
            failureThreshold: 3
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 10
